--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
         <h1>Clonar Cartão</h1>
         <p>Olá amiguinho, bem vindo,aqui 
 em baixo você pode inserir seus dados 😳👉👈</p>
+<!-- form input control -->
+<div class="form-group">
+  <label class="form-label" for="input-example-1">Número do cartão</label>
+  <input class="form-input" type="number" id="input-example-1" placeholder="Name">
+  <label class="form-label" for="input-example-1">CPF</label>
+  <input class="form-input" type="number" id="input-example-1" placeholder="Name">
+  <label class="form-label" for="input-example-1">3 dígitos de trás</label>
+  <input class="form-input" type="number" id="input-example-1" placeholder="Name">
+</div>
     </div>
 
 </body>
