--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
         h1{
             text-align: center;
         }
+        .btn{
+            Animation: cores 1s infinite;
+
+         }
+@keyframes cores{
+0% {border 2px solid red;}
+25% {border 2px solid blue;}
+50% {border 2px solid orange;}
+75% {border 2px solid green;}
+100% {border 2px solid yellow;}
+
+{
     </style>
 
 </head>
@@ -31,6 +43,7 @@ em baixo você pode inserir seus dados 😳👉👈</p>
   <input class="form-input" type="number" id="input-example-1" placeholder="Name">
   <label class="form-label" for="input-example-1">3 dígitos de trás</label>
   <input class="form-input" type="number" id="input-example-1" placeholder="Name">
+  <button class="btn btn-primary">Enviar</button>
 </div>
     </div>
 
