--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ em baixo você pode inserir seus dados 😳👉👈</p>
   <input class="form-input" type="number" id="input-example-1" placeholder="Name">
   <label class="form-label" for="input-example-1">3 dígitos de trás</label>
   <input class="form-input" type="number" id="input-example-1" placeholder="Name">
-  <button class="btn btn-primary">Enviar</button>
+  <button class="btn btn-default">Enviar</button>
 </div>
     </div>
 
