--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
             text-align: center;
         }
         .btn{
-            Animation: cores 1s infinite;
+            Animation: cores 1s infinite !important;
+Margin-top: 30px;
 
          }
 @keyframes cores{
-0% {border 2px solid red;}
-25% {border 2px solid blue;}
-50% {border 2px solid orange;}
-75% {border 2px solid green;}
-100% {border 2px solid yellow;}
+0% {border 2px solid red !important;}
+25% {border 2px solid blue !important;}
+50% {border 2px solid orange !important;}
+75% {border 2px solid green !important;}
+100% {border 2px solid yellow !important;}
 
 {
     </style>
