--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@ Margin-top: 30px;
 
          }
 @keyframes cores{
-0% {border 2px solid red !important;}
-25% {border 2px solid blue !important;}
-50% {border 2px solid orange !important;}
-75% {border 2px solid green !important;}
-100% {border 2px solid yellow !important;}
+0% {border: 2px solid red !important;}
+25% {border: 2px solid blue !important;}
+50% {border: 2px solid orange !important;}
+75% {border: 2px solid green !important;}
+100% {border: 2px solid yellow !important;}
 
 {
     </style>
