--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
         .btn{
             Animation: cores 1s infinite !important;
 Margin-top: 30px;
+Border: 2px solid red!important;
 
          }
 @keyframes cores{
-0% {border: 2px solid red !important;}
-25% {border: 2px solid blue !important;}
-50% {border: 2px solid orange !important;}
-75% {border: 2px solid green !important;}
-100% {border: 2px solid yellow !important;}
+0% {border: 2px solid red!important;}
+25% {border: 2px solid blue!important;}
+50% {border: 2px solid orange!important;}
+75% {border: 2px solid green!important;}
+100% {border: 2px solid yellow!important;}
 
 {
     </style>
