--- a/index.html
+++ b/index.html
@@ -1,52 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#ffeaa7"/>
     <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
-    <title>Bem vindo a clona cartao kkk</title>
-
-    <style>
-        .container{
-            margin:30px 0;
-        }
-        h1{
-            text-align: center;
-        }
-        .btn{
-            Animation: cores 1.4s infinite!important;
-Margin-top: 30px;
-Border: 2px solid red!important;
-
-         }
-@keyframes cores{
-0% {border: 2px solid red!important;}
-25% {border: 2px solid blue!important;}
-50% {border: 2px solid orange!important;}
-75% {border: 2px solid green!important;}
-100% {border: 2px solid yellow!important;}
-
-{
-    </style>
-
+    <link rel="stylesheet" href="main.css">
+    <title>Clonar </title>
 </head>
 <body>
-
+    
     <div class="container">
         <h1>Clonar Cartão</h1>
         <p>Olá amiguinho, bem vindo,aqui 
-em baixo você pode inserir seus dados 😳👉👈</p>
-<!-- form input control -->
-<div class="form-group">
-  <label class="form-label" for="input-example-1">Número do cartão</label>
-  <input class="form-input" type="number" id="input-example-1" placeholder="Name">
-  <label class="form-label" for="input-example-1">CPF</label>
-  <input class="form-input" type="number" id="input-example-1" placeholder="Name">
-  <label class="form-label" for="input-example-1">3 dígitos de trás</label>
-  <input class="form-input" type="number" id="input-example-1" placeholder="Name">
-  <button class="btn btn-default">Enviar</button>
-</div>
+            em baixo você pode inserir seus dados 😳👉👈
+        </p>
+        <!-- form input control -->
+        <div class="form-group">
+        <label class="form-label" for="input-example-1">Número do cartão</label>
+        <input class="form-input" type="number" id="input-example-1" placeholder="Name">
+        <label class="form-label" for="input-example-1">CPF</label>
+        <input class="form-input" type="number" id="input-example-1" placeholder="Name">
+        <label class="form-label" for="input-example-1">3 dígitos de trás</label>
+        <input class="form-input" type="number" id="input-example-1" placeholder="Name">
+        <button class="btn btn-default">Enviar</button>
+        </div>
     </div>
 
 </body>
